--- a/src/NDCOslo2024.Client/index.html
+++ b/src/NDCOslo2024.Client/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <link rel="stylesheet" href="./styles/styles.css"/>
 </head>
-<body>
+<body data-theme="light">
     <div id="safer-app"></div>
     <script type="module" src=".fable-build/App.js"></script>
 </body>
