Adding example with Elmish

--- a/src/NDCOslo2024.Client/index.html
+++ b/src/NDCOslo2024.Client/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html lang="en">
 <head>
-    <title>SAFEr Template</title>
+    <title>NDC Oslo 2024</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
